some new lessons

--- a/learning/index.html
+++ b/learning/index.html
@@ -65,6 +65,21 @@
 
      <!-- Ты также можешь добавить возможность связаться с тобой по указанному телефону, если в ссылке добавишь  tel: и после двоеточия укажешь нужный номер телефона -->
 
-     <a href="https://t.me/schmunkem">Telegram</a>
+     <a href="https://t.me/schmunkem" target="_blank">Telegram </a>
+
+     <!-- Чтобы каждый раз при нажатии на ссылку переходить на новую страницу в браузере нужно добавить значение _blank в атрибут target -->
+
+     <button type="button">Кнопка типа button</button>
+
+     <!-- Значение button нужно прописывать по умолчанию во всех тегах-кнопках, кроме тех, что будут использоваться как reset и submit, чтобы показать, что это кнопка не будет использоваться для сброса или отправки значений-->
+
+     <button type="reset">Кнопка типа reset</button>
+
+     <!-- Значение reset используется только в теге form для сброса всех значений в форме  -->
+
+     <button type="submit">Кнопка типа submit</button>
+
+     <!-- Значние submit нужно использовать только тогда, когда button лежит в теге form и данная кнопка должна будет эту форму отправить -->
+
 </body>
 </html>
