--- a/learning/index.html
+++ b/learning/index.html
@@ -1,85 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Learnin</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мои заметки по HTML</title>
 </head>
 <body>
 
-     <a href="#contacts">Контакты</a>
+<h1>Мои учебные заметки по HTML</h1>
 
-     <!-- Урок 3-->
-     <p>Lorem <mark>ipsum dolor</mark>, <i>sit amet consectetur adipisicing elit.</i> Saepe, <s>iste quaerat. Distinctio mollitia corporis a eligendi velit <br/> nihil cum</s> <u>inventore fugit magnam commodi?</u> <b>Quasi veniam provident, nostrum reprehenderit assumenda maxime.</b></p>
-     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus necessitatibus, distinctio quibusdam consectetur eveniet modi vero, placeat atque autem ducimus ut, obcaecati laborum delectus sunt cupiditate illum praesentium dolorem dolorum?</p>
+<!--
+===========================================
+Урок 3: Текстовые теги и их семантика
+===========================================
 
-     <!-- p - в данном случае просто блок с текстом, для которого можно применять разные атрибуты типа class и т.п, а b  ровно тоже самый блок с текстом, только шрифт Жирный, а i превращает текст в курсив. Также стоит добавить информацию про тег s для зачеркнутого текста, тег strong -  аналон b, но скрин ридер будет считать информацию важной. Точно также и em придает больший смысл для курсива, нежели i. Тег u в свою очередь подчеркивает определенную часть текста. Тег mark выделяет обозначенную вами часть текста цветом. Тег br  указывается в том месте, где нужно выполнить перенос строки -->
+Основные теги форматирования текста:
+- <p> - основной блок текста (paragraph)
+- <b> - визуальное выделение жирным
+- <i> - визуальный курсив
+- <s> - зачеркнутый текст
+- <u> - подчеркнутый текст (не рекомендуется для ссылок)
+- <mark> - выделение цветом
 
-     <!-- Урок 4 -->
-     <h1>Заголовок 1 уровня</h1>
-     <h2>Заголовок 2 уровня</h2>
-     <h3>Заголовок 3 уровня</h3>
-     <h4>Заголовок 4 уровня</h4>
-     <h5>Заголовок 5 уровня</h5>
-     <h6>Заголовок 6 уровня</h6>
+Семантические аналоги:
+- <strong> - важность содержания
+- <em> - смысловое ударение
+-->
+<h2>Урок 3: Текстовые теги</h2>
 
-     <ul>
-          <li>Я элемент маркированного списока</li>
-          <li>Я элемент маркированного списока</li>
-          <li>Я элемент маркированного списока</li>
-     </ul>
+<p>Это обычный абзац с <b>жирным</b>, <i>курсивом</i> и <mark>выделением</mark>.</p>
 
-     <ol>
-          <li>Я элемент нумированного списока</li>
-          <li>Я элемент нумированного списока</li>
-          <li>Я элемент нумированного списока</li>
-     </ol>
+<p><strong>Важно</strong>: <em>семантические</em> теги лучше для доступности.</p>
 
-     <!-- Урок 5 -->
-     <p>Первое предложение</p>
-     <p>Второе предложение</p>
-     <hr/>
-     <p>Заключительное предложение</p>
+<p>Старая цена: <s>1000 руб.</s> Новая: 500 руб.</p>
 
-     <!-- Тег hr  создает горизонтальную черту, которая позволяет отделить нужную часть информации от другой -->
+<!--
+===========================================
+Урок 4: Заголовки и списки
+===========================================
 
-     <p> Привет! Я создал этот текст для того, чтобы показать как выглядить предложение <q>Привет, Мир!</q> на языке кода: <strong><code>print("Hello, World!")</code></strong></p>
+Заголовки:
+- <h1>-<h6> - иерархия документа
+- Только один <h1> на странице
 
-     <!-- Тег code используется для того, чтобы продемонстрировать частичку кода в твоем тексте -->
+Списки:
+- <ul> - маркированный список
+- <ol> - нумерованный список
+- <li> - элемент списка
+-->
+<h2>Урок 4: Заголовки и списки</h2>
 
-     <!-- Урок 6 -->
+<h1>Главный заголовок</h1>
+<h2>Подзаголовок</h2>
 
-     <h1 id="contacts">
-          <a href="mailto:ssselery@gmail.com">Написать нам<a>
-     </h1>
+<ul>
+    <li>Пункт 1</li>
+    <li>Пункт 2</li>
+</ul>
 
-     <!-- В самом начале я сделал ссылку на id заголовка контактов с символом #, теперь при нажатии на данную ссылку меня автоматически будет перебрасывать на ту часть страницы, где лежит блок с id = contacts. это называется  Якорная Ссылка  -->
+<ol>
+    <li>Первый пункт</li>
+    <li>Второй пункт</li>
+</ol>
 
-     <!-- Также я добавил в атрибут href  ссылку на свою почту, добавляя возможность написать письмо мне через mailto:example@gmail.com -->
+<!--
+===========================================
+Урок 5: Разделители и код
+===========================================
 
-     <a href="/some-file.zip" download=""></a>
+Теги:
+- <hr> - тематический раздел
+- <code> - отображение кода
+- <q> - короткая цитата
+-->
+<h2>Урок 5: Разделители и код</h2>
 
-     <!-- Также через тег a можно добавить возможность скачивать что-то на вашем сайте, важно добавить атрибут download  -->
+<p>Текст до разделителя</p>
+<hr>
+<p>Текст после разделителя</p>
 
-     <a href="tel:+79775200671">Связаться со мной</a>
+<p>Пример кода: <code>console.log("Hello")</code></p>
 
-     <!-- Ты также можешь добавить возможность связаться с тобой по указанному телефону, если в ссылке добавишь  tel: и после двоеточия укажешь нужный номер телефона -->
+<p>Цитата: <q>Практика - путь к мастерству</q></p>
 
-     <a href="https://t.me/schmunkem" target="_blank">Telegram </a>
+<!--
+===========================================
+Урок 6: Ссылки и кнопки
+===========================================
 
-     <!-- Чтобы каждый раз при нажатии на ссылку переходить на новую страницу в браузере нужно добавить значение _blank в атрибут target -->
+Ссылки (<a>):
+- href - основной атрибут
+- Особые случаи: mailto:, tel:, #якорь
+- download - скачивание файла
 
-     <button type="button">Кнопка типа button</button>
+Кнопки (<button>):
+- type="button" - обычная кнопка
+- type="submit" - отправка формы
+- type="reset" - сброс формы
+-->
+<h2>Урок 6: Ссылки и кнопки</h2>
 
-     <!-- Значение button нужно прописывать по умолчанию во всех тегах-кнопках, кроме тех, что будут использоваться как reset и submit, чтобы показать, что это кнопка не будет использоваться для сброса или отправки значений-->
+<a href="#contacts">Якорная ссылка</a><br>
+<a href="mailto:example@mail.com">Ссылка на почту</a><br>
+<a href="tel:+123456789">Ссылка на телефон</a><br>
+<a href="https://example.com" target="_blank">Внешняя ссылка</a>
 
-     <button type="reset">Кнопка типа reset</button>
+<button type="button">Обычная кнопка</button>
+<button type="submit">Отправить</button>
+<button type="reset">Сбросить</button>
 
-     <!-- Значение reset используется только в теге form для сброса всех значений в форме  -->
-
-     <button type="submit">Кнопка типа submit</button>
-
-     <!-- Значние submit нужно использовать только тогда, когда button лежит в теге form и данная кнопка должна будет эту форму отправить -->
+<h2 id="contacts">Контакты</h2>
+<p>Свяжитесь с нами!</p>
 
 </body>
 </html>
