--- a/learning/index.html
+++ b/learning/index.html
@@ -112,5 +112,41 @@
 <h2 id="contacts">Контакты</h2>
 <p>Свяжитесь с нами!</p>
 
+<!--
+===========================================
+Урок 7: Изображения
+===========================================
+
+- src="" - путь до самой картинки
+- alt="" - описание картинки, которое поможет понять смысл изображения, если оно вдруг не прогрузилось
+- width и height нужно указывать для того, чтобы при прогрузке сайта уже была выделена область для картинки, иначе изображение будет влиять на интерфейс сайта неопределенным образом и может сломать логику.
+- loading="lazy" - атрибут loading сщ значением lazy позволяет разгрузить сеть от необязательных загрузок изображений, которые пользователь не видит при появлении страницы. Простыми словами позволяет замедлить загрузку изображения и разгружает сеть.
+-->
+
+
+<img src="assets/img/nth.jpg" alt="Тут не должно быть изображения, т.к мне лень вставлять картинку" width="250" height="250" loading="lazy">
+
+
+<!--
+===========================================
+Урок 8: Цитаты, теги и атрибуты
+===========================================
+-->
+
+<blockquote cite="https://example.com"> <p> Lorem ipsum, dolor sit amet. </p></blockquote>
+
+<p>
+    Как бы сказал Станиславский: <q cite="...">Не верю!</q>
+</p>
+
+<!--
+===========================================
+Урок 9: Медиаконтент
+===========================================
+-->
+
+
+
+
 </body>
 </html>
