some new lessons

--- a/learning/base.html
+++ b/learning/base.html
@@ -23,15 +23,13 @@
 - <mark> - выделение цветом
 
 Семантические аналоги:
-- <strong> - важность содержания
-- <em> - смысловое ударение
+- <strong> - важность содержания (SEO и доступность)
+- <em> - смысловое ударение (SEO и доступность)
 -->
 <h2>Урок 3: Текстовые теги</h2>
 
 <p>Это обычный абзац с <b>жирным</b>, <i>курсивом</i> и <mark>выделением</mark>.</p>
-
 <p><strong>Важно</strong>: <em>семантические</em> теги лучше для доступности.</p>
-
 <p>Старая цена: <s>1000 руб.</s> Новая: 500 руб.</p>
 
 <!--
@@ -41,26 +39,26 @@
 
 Заголовки:
 - <h1>-<h6> - иерархия документа
-- Только один <h1> на странице
+- Важно: только ОДИН <h1> на странице (для SEO)
 
 Списки:
-- <ul> - маркированный список
-- <ol> - нумерованный список
-- <li> - элемент списка
+- <ul> - маркированный список (unordered list)
+- <ol> - нумерованный список (ordered list)
+- <li> - элемент списка (list item)
 -->
 <h2>Урок 4: Заголовки и списки</h2>
 
-<h1>Главный заголовок</h1>
-<h2>Подзаголовок</h2>
+<h1>Главный заголовок страницы</h1>
+<h2>Раздел 1</h2>
 
 <ul>
-    <li>Пункт 1</li>
-    <li>Пункт 2</li>
+    <li>Элемент маркированного списка</li>
+    <li>Еще один элемент</li>
 </ul>
 
 <ol>
-    <li>Первый пункт</li>
-    <li>Второй пункт</li>
+    <li>Первый элемент нумерованного списка</li>
+    <li>Второй элемент</li>
 </ol>
 
 <!--
@@ -69,9 +67,9 @@
 ===========================================
 
 Теги:
-- <hr> - тематический раздел
-- <code> - отображение кода
-- <q> - короткая цитата
+- <hr> - тематический раздел (горизонтальная линия)
+- <code> - отображение кода (моноширинный шрифт)
+- <q> - короткая цитата (автоматические кавычки)
 -->
 <h2>Урок 5: Разделители и код</h2>
 
@@ -80,8 +78,7 @@
 <p>Текст после разделителя</p>
 
 <p>Пример кода: <code>console.log("Hello")</code></p>
-
-<p>Цитата: <q>Практика - путь к мастерству</q></p>
+<p>Как сказал автор: <q>Это пример цитаты</q></p>
 
 <!--
 ===========================================
@@ -90,95 +87,165 @@
 
 Ссылки (<a>):
 - href - основной атрибут
-- Особые случаи: mailto:, tel:, #якорь
-- download - скачивание файла
+- Особые случаи:
+  * mailto: - ссылка на почту
+  * tel: - ссылка на телефон
+  * #id - якорь (прокрутка к элементу)
+  * download - скачивание файла
+  * target="_blank" - открытие в новой вкладке
 
 Кнопки (<button>):
-- type="button" - обычная кнопка
+- type="button" - обычная кнопка (по умолчанию)
 - type="submit" - отправка формы
 - type="reset" - сброс формы
 -->
 <h2>Урок 6: Ссылки и кнопки</h2>
 
-<a href="#contacts">Якорная ссылка</a><br>
-<a href="mailto:example@mail.com">Ссылка на почту</a><br>
-<a href="tel:+123456789">Ссылка на телефон</a><br>
+<a href="#contacts">К контактам (якорь)</a><br>
+<a href="mailto:example@mail.com">Написать нам</a><br>
+<a href="tel:+123456789">Позвонить</a><br>
 <a href="https://example.com" target="_blank">Внешняя ссылка</a>
 
 <button type="button">Обычная кнопка</button>
 <button type="submit">Отправить</button>
 <button type="reset">Сбросить</button>
 
-<h2 id="contacts">Контакты</h2>
-<p>Свяжитесь с нами!</p>
-
 <!--
 ===========================================
 Урок 7: Изображения
 ===========================================
 
-- src="" - путь до самой картинки
-- alt="" - описание картинки, которое поможет понять смысл изображения, если оно вдруг не прогрузилось
-- width и height нужно указывать для того, чтобы при прогрузке сайта уже была выделена область для картинки, иначе изображение будет влиять на интерфейс сайта неопределенным образом и может сломать логику.
-- loading="lazy" - атрибут loading сщ значением lazy позволяет разгрузить сеть от необязательных загрузок изображений, которые пользователь не видит при появлении страницы. Простыми словами позволяет замедлить загрузку изображения и разгружает сеть.
+Основные атрибуты:
+- src - путь к изображению
+- alt - альтернативный текст (обязателен для доступности)
+- width/height - размеры изображения (рекомендуется указывать)
+- loading="lazy" - отложенная загрузка
+
+Лучшие практики:
+1. Всегда используйте alt для доступности
+2. Оптимизируйте изображения перед загрузкой
+3. Для адаптивности используйте srcset
 -->
+<h2>Урок 7: Изображения</h2>
 
-
-<img src="assets/img/LovelyVSCode.jpg" alt="Тут будет какое-то аниме изображение" width="100%" height="500" loading="lazy">
-
+<img src="assets/img/LovelyVSCode.jpg"
+     alt="Пример изображения"
+     width="500"
+     height="300"
+     loading="lazy">
 
 <!--
 ===========================================
-Урок 8: Цитаты, теги и атрибуты
+Урок 8: Цитаты
 ===========================================
+
+Теги:
+- <blockquote> - длинная цитата (с атрибутом cite)
+- <q> - короткая встроенная цитата
+
+Разница:
+- <blockquote> создает отдельный блок
+- <q> автоматически добавляет кавычки
 -->
+<h2>Урок 8: Цитаты</h2>
 
-<blockquote cite="https://example.com"> <p> Lorem ipsum, dolor sit amet. </p></blockquote>
+<blockquote cite="https://example.com">
+    <p>Это пример длинной цитаты, которая занимает несколько строк.</p>
+</blockquote>
 
-<p>
-    Как бы сказал Станиславский: <q cite="...">Не верю!</q>
-</p>
+<p>Как говорил Эйнштейн: <q cite="...">Воображение важнее знания</q></p>
 
 <!--
 ===========================================
 Урок 9: Медиаконтент
 ===========================================
 
-- Тег <video> нужен для того, чтобы вставить видео на твой сайт, также стоит добавить к нему атрибут controls, чтобы пользователь мог хотя бы минимально управлять настройками видео.
-- Если видео есть сразу в нескольких форматах, то можно не указывать src для видео, а добавить несколько source с указанием src до этого видео в определенном формате, а также указав на формат с помощью type. В таком случае браузер будет воспроизводить первый вариант, который он сможет воспроизвести. На случай, если он не сможет отобразить ни один из данных видео, вы можете оставить текст, который будет вопроизведен.
-- Если разработчику нужно, чтобы видео вопроизводилось при открытии сайта, то в <video> можно прописать атрибуты autoplay и muted. Muted является обязательным атрибутом, если хочешь использовать autoplay., иначе браузер просто не даст возможность запустить видео.
-- Атрибут loop используется для того, чтобы зациклить видео сразу после его завершения.
-- Атрибут постер дает возможность поставить обложку на видео.
-- Тег <audio> позволяет воспроизводить звуки в браузере и имеет почти все те же атрибуты, что и <video>.
-- Тег <iframe> позволяет вставить почти любой медиаконтент к вам на страничку, в качестве примера тут - яндекс карты с меткой, указывающей на мой дом и видео, которое помогает мне в изучении данного языка разметки.
+Видео (<video>):
+- controls - элементы управления
+- autoplay - автоматическое воспроизведение (только с muted)
+- muted - отключение звука
+- loop - зацикливание
+- poster - обложка видео
 
+Аудио (<audio>):
+- Имеет аналогичные атрибуты
+
+iframe:
+- Позволяет встраивать внешний контент
+- Для видео используйте параметры:
+  * allowfullscreen
+  * frameborder="0"
 -->
+<h2>Урок 9: Медиаконтент</h2>
 
-<video src="assets/video/example.mp4"
-controls
-autoplay
-muted
-loop
-poster = "assets/img/LovelyVSCode.jpg"
->
-</video>
-<video>
-    <source src="video/example.mp4" type="video/mp4">
-    <source src="video/example.webm" type="video/webm">
-    <p>К сожалению, ваш браузер не поддерживает видео</p>
+<video controls width="500">
+    <source src="assets/video/example.mp4" type="video/mp4">
+    <source src="assets/video/example.webm" type="video/webm">
+    Ваш браузер не поддерживает видео.
 </video>
 
-<audio src="#" controls></audio>
+<audio src="assets/audio/example.mp3" controls></audio>
 
-<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Abb1c42c981e097a45542ce80bc493f1acc5bda702c80460d810afb1ffceabecf&amp;source=constructor" width="505" height="356" frameborder="0"></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6PL2TqBdz0I?si=Lfk287d7lVSkZOq5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315"
+        src="https://www.youtube.com/embed/example"
+        frameborder="0"
+        allowfullscreen>
+</iframe>
 
 <!--
 ===========================================
 Урок 10: Таблицы
 ===========================================
+
+Основные теги:
+- <table> - контейнер таблицы
+- <caption> - заголовок таблицы
+- <thead> - шапка таблицы (заголовочные строки)
+- <tbody> - основное тело таблицы
+- <tfoot> - подвал таблицы
+- <tr> - строка таблицы
+- <th> - заголовочная ячейка
+- <td> - ячейка данных
+
+Атрибуты:
+- border - рамки (устаревший, лучше использовать CSS)
+- colspan - объединение столбцов
+- rowspan - объединение строк
 -->
+<h2>Урок 10: Таблицы</h2>
+
+<table border="1">
+    <caption>Заявки на получение прав</caption>
+    <thead>
+        <tr>
+            <th>Имя</th>
+            <th>Номер заявки</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Александр</td>
+            <td>101</td>
+        </tr>
+        <tr>
+            <td>Алексей</td>
+            <td>102</td>
+        </tr>
+        <tr>
+            <td>Михаил</td>
+            <td>103</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td>Итого участников</td>
+            <td>3</td>
+        </tr>
+    </tfoot>
+</table>
+
+<h2 id="contacts">Контакты</h2>
+<p>Свяжитесь с нами!</p>
 
 </body>
 </html>
