some new lessons

--- a/learning/just_html/basement.html
+++ b/learning/just_html/basement.html
@@ -362,6 +362,23 @@ Select:
     </p>
 </form>
 
+
+<!--
+===========================================
+Урок 14: Атрибуты
+===========================================
+
+
+
+-->
+
+
+
+
+<!--
+/* ──────────────────────────  Контакты ────────────────────────── */
+ -->
+
 <h2 id="contacts">Контакты</h2>
 <p>Свяжитесь с нами!</p>
 
