--- a/learning/just_html/basement.html
+++ b/learning/just_html/basement.html
@@ -98,6 +98,10 @@
 - type="button" - обычная кнопка (по умолчанию)
 - type="submit" - отправка формы
 - type="reset" - сброс формы
+
+Атрибуты ссылок:
+- target="_blank" - открыть в новой вкладке
+- rel="noopener" - защита от фишинга
 -->
 <h2>Урок 6: Ссылки и кнопки</h2>
 
@@ -421,13 +425,151 @@ Select:
     <button type="submit" autofocus>Отправить</button>
 </form>
 
+<!--
+===========================================
+Урок 15: Семантические теги
+===========================================
+
+Основные семантические теги:
+- <header> - шапка сайта (лого, навигация)
+- <footer> - подвал (контакты, копирайт)
+- <main> - основное содержание страницы
+- <nav> - навигационное меню
+- <section> - тематический раздел
+- <article> - самостоятельный контент (пост, новость)
+- <aside> - дополнительный контент (сайдбар)
+- <div> - универсальный контейнер без семантики
+
+Правила использования:
+1. <header>/<footer> можно использовать как для всей страницы, так и для отдельных <article>
+2. В <main> должен быть только один на странице
+3. <section> всегда должен иметь заголовок (<h2>-<h6>)
+-->
+<h2>Урок 15: Семантические теги</h2>
+
+<header>
+  <h1>Логотип</h1>
+  <nav>
+    <ul>
+      <li><a href="#">Главная</a></li>
+      <li><a href="#">О нас</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <article>
+    <h2>Новость дня</h2>
+    <p>Текст новости...</p>
+  </article>
+
+  <aside>
+    <h3>Рекомендуем</h3>
+    <p>Другие статьи</p>
+  </aside>
+</main>
+
+<footer>
+  <p>© 2023 Мой сайт</p>
+</footer>
+
+<!--
+===========================================
+Урок 16: Векторная графика (SVG)
+===========================================
+
+Особенности SVG:
+- Масштабируется без потери качества
+- Меньший вес, чем растровые изображения
+- Управляется через CSS/JS
+- Идеально для иконок, логотипов, графиков
+
+Когда использовать:
+- Иконки, логотипы → SVG
+- Фотографии → JPEG
+- Изображения с прозрачностью → PNG
+
+Способы вставки:
+1. Прямо в HTML (для управления стилями)
+2. Через <img> (если не нужно изменять)
+-->
+<h2>Урок 16: Векторная графика</h2>
+
+<svg width="100" height="100" viewBox="0 0 100 100">
+  <circle cx="50" cy="50" r="40" fill="blue"/>
+  <text x="50" y="60" text-anchor="middle" fill="white">SVG</text>
+</svg>
+
+<!-- Альтернатива -->
+<img src="logo.svg" alt="Логотип" width="100">
+
+<!--
+===========================================
+Урок 17: Глобальные атрибуты
+===========================================
+
+Важные атрибуты:
+- class - для стилей и JS (может повторяться)
+- id - уникальный идентификатор (1 на страницу)
+- title - всплывающая подсказка
+- hidden - скрывает элемент
+- tabindex - порядок перехода по Tab
+- contenteditable - разрешает редактирование
+- data-* - пользовательские атрибуты
+
+Особенности:
+- id должен быть уникальным
+- tabindex="0" - в естественном порядке
+- tabindex="-1" - исключает из последовательности
+-->
+<h2>Урок 17: Глобальные атрибуты</h2>
+
+<div class="alert" id="main-alert" title="Важное сообщение">
+  Это уведомление
+</div>
+
+<p contenteditable="true">Можно редактировать</p>
+<button tabindex="1">Первая кнопка</button>
+
+<!--
+===========================================
+Урок 18: Проверка кода
+===========================================
+
+Полезные сервисы:
+1. Проверка поддержки в браузерах:
+   - https://caniuse.com/ (вводите название тега/свойства)
+
+2. Проверка вложенности тегов:
+   - https://caninclude.glitch.me/ (вводите "может ли <tag1> содержать <tag2>")
+
+3. Валидация HTML:
+   - https://validator.w3.org/ (проверяет ошибки в коде)
+
+Рекомендации:
+- Всегда проверяйте новые теги через caniuse
+- Используйте валидатор перед сдачей работы
+-->
+<h2>Урок 18: Проверка кода</h2>
+
+<section>
+  <h3>Полезные ссылки</h3>
+  <ul>
+    <li><a href="https://caniuse.com/" target="_blank" style="text-decoration: none;">Проверить html-тег на актуальность и совместимость</a></li>
+    <li><a href="https://caninclude.glitch.me/" target="_blank" style="text-decoration: none">Проверка на корректную вложенность</a></li>
+    <li><a href="https://validator.w3.org/" target="_blank" style="text-decoration: none">Общая проверка html-кода</a></li>
+  </ul>
+</section>
 
 <!--
 /* ──────────────────────────  Контакты ────────────────────────── */
  -->
 
-<h2 id="contacts">Контакты</h2>
-<p>Свяжитесь с нами!</p>
+
+<footer>
+    <h2 id="contacts">Контакты</h2>
+    <p>Свяжитесь с нами!</p>
+</footer>
 
 </body>
 </html>
