some new lessons

--- a/learning/just_css/css_help.html
+++ b/learning/just_css/css_help.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="learning.css">
     <title>CSS Learning</title>
     <style>
         /* Встроенные стили (второй по приоритету способ подключения) */
@@ -111,5 +111,92 @@
     <h2 class="using-after">Элемент, после которого меняются стили (через ~)</h2>
     <p class="parag">Параграф (измененный стиль)</p>
     <p class="parag">Параграф (измененный стиль)</p>
+
+    <!--
+    ===========================================
+    Урок 3:  Блочная модель в CSS
+    ===========================================
+
+    Свойство:
+    -display
+    Значения:
+
+    1.Block
+    1.1 Занимает всю ширину родителя.
+    1.2 Можно задавать width, height, margin, padding.
+    1.3 Используется для div по умолчанию.
+
+    2. Inline
+    2.1 Занимает ровно столько места, сколько нужно контенту внутри.
+    2.2 Нельзя задавать width, height, margin-top/bottom.
+
+    3. Inline-block
+    3.1 Ведет себя как inline
+    3.2 Но можно задавать width, height, margin, padding.
+
+    4. None
+    4.1 Позволяет полностью скрыть элемент со страницы
+    4.2 Элемент все еще доступен для разметки
+
+    Свойство: padding
+    - padding: 15px -> отступы внутри по 15 пикселей с каждой стороны
+    - padding: 15px 40px -> отступы внутри: 15px сверху и снизу, 40px справа и слева
+
+    Свойство: border
+    - border: 5px solid red -> указывать: ширина + тип линии + цвет(черный по умолчанию) в любом порядке
+
+    Свойство: box-sizing
+    - content-box -> width и height задаются только для контента, border и padding добавляются снаружи
+    - border-box -> width и height включают в себя border и padding, размер элемента остается фиксированным.
+
+
+    Важно:
+    Итоговые width и height считаются с учетом padding, border и других свойств. Margin не прибавляется!
+    -->
+
+    <div class="block-obj">Я - блок(блочный элемент)</div>
+
+    <span class="inline-obj">А я - строчный элемент</span>
+
+    <span class="inline-block-obj">А я - строчно-блочный элемент</span>
+
+    <div class="none-obj">А я - неотображаемый элемент</div>
+
+    <div class="test-block">Padding: 15px 40px</div>
+
+    <div class="common-box">Я просто блок</div>
+
+    <div class="common-box normal-size">А я блок с фиксированным размерами</div>
+
+    <div class="rule-breaking-block">А я нарушаю правила</div>
+
+    <!--
+    ===========================================
+    Урок 4: Внутренние и внешние отступы в CSS
+    ===========================================
+
+    Свойство: padding
+    - Одно значение -> применяется на все стороны относительно объекта
+    - Два значения -> верх и низ + право и лево
+    - Три значения -> верх + право и лево + низ
+    - Четрые значения -> верх + право + низ + лево
+
+    - Уpadding также существует несколько версий для добавления отступов в отдельной стороне:
+    -top,-right,-botttom,-left -> для каждой стороны
+    -block, -inline -> по вертикали и горизонтали соответственно
+
+
+    Свойство: margin
+    Значения регулируются аналогично padding.
+
+    Обратить внимание:
+    -Возможно установить значение margin: auto, в таком случае браузер сам решит, сколько нужно сделать отступы.
+    - Значение magin может быть отрицательно
+
+    Важно:
+    - При столкновении двух margin у разных элементов браузер выберет наибольший и применит его, например при столкновении двух элементов с отступами 50 и 100 друг от друга, расстояние между ними будет 100.
+
+    -->
+
 </body>
 </html>
